reportdesign/qa/unit/ReportDesignBasicTests.cxx
@@ -21,6 +21,7 @@
 
 #include <com/sun/star/sdb/application/XDatabaseDocumentUI.hpp>
 #include <comphelper/namedvaluecollection.hxx>
+#include <com/sun/star/text/XTextDocument.hpp>
 
 using namespace ::com::sun::star;
 using namespace ::com::sun::star::uno;
@@ -56,6 +57,62 @@ CPPUNIT_TEST_FIXTURE(RptBasicTest, roundTripTest)
 
     testLoadingAndSaving(u"writer8"_ustr, aReportNames[0], xComponentLoader, xActiveConnection);
     testLoadingAndSaving(u"calc8"_ustr, aReportNames[1], xComponentLoader, xActiveConnection);
+}
+
+CPPUNIT_TEST_FIXTURE(RptBasicTest, multiGroupingSameFieldIntervals)
+{
+    // ODB fixture must contain a table and a report that groups on the same field twice
+    // with different settings (e.g., INTERVAL 5 and INTERVAL 10). The report should be
+    // prepared to reproduce the original failure (Column not found: INT_count_...).
+    loadURLCopy(u"ReportBuilder_grouping_same_field.odb");
+
+    Reference<frame::XModel> xModel(mxComponent, UNO_QUERY_THROW);
+    Reference<frame::XController> xController(xModel->getCurrentController());
+    Reference<sdb::application::XDatabaseDocumentUI> xUI(xController, UNO_QUERY_THROW);
+
+    xUI->connect();
+    Reference<XConnection> xActiveConnection = xUI->getActiveConnection();
+
+    Reference<XReportDocumentsSupplier> xSupp(xModel, UNO_QUERY_THROW);
+    Reference<container::XNameAccess> xNameAccess = xSupp->getReportDocuments();
+    const Sequence<OUString> aReportNames(xNameAccess->getElementNames());
+    CPPUNIT_ASSERT(aReportNames.getLength() > 0);
+
+    Reference<frame::XComponentLoader> xComponentLoader(xNameAccess, UNO_QUERY_THROW);
+
+    // Execute all reports via writer export. This will fail the test if any report
+    // throws ReportExecutionException like "Column not found: INT_count_Number_*".
+    for (const OUString& rName : aReportNames)
+        testLoadingAndSaving(u"writer8"_ustr, rName, xComponentLoader, xActiveConnection);
+
+    // Additionally, load the textual outputs of all reports and compare their lengths.
+    // They should be identical.
+    if (aReportNames.getLength() >= 2)
+    {
+        ::comphelper::NamedValueCollection aLoadArgs;
+        aLoadArgs.put(u"ActiveConnection"_ustr, xActiveConnection);
+
+        Reference<lang::XComponent> xComp1 = xComponentLoader->loadComponentFromURL(
+            aReportNames[0], u"_blank"_ustr, 0, aLoadArgs.getPropertyValues());
+        Reference<lang::XComponent> xComp2 = xComponentLoader->loadComponentFromURL(
+            aReportNames[1], u"_blank"_ustr, 0, aLoadArgs.getPropertyValues());
+        Reference<text::XTextDocument> xTextDoc1(xComp1, UNO_QUERY);
+        Reference<text::XTextDocument> xTextDoc2(xComp2, UNO_QUERY);
+
+        if (xTextDoc1.is() && xTextDoc2.is())
+        {
+            sal_Int32 nLen1 = xTextDoc1->getText()->getString().getLength();
+            sal_Int32 nLen2 = xTextDoc2->getText()->getString().getLength();
+            CPPUNIT_ASSERT_EQUAL_MESSAGE("Report textual output length differs", nLen1, nLen2);
+        }
+
+        Reference<util::XCloseable> xClose1(xComp1, UNO_QUERY);
+        if (xClose1.is())
+            xClose1->close(true);
+        Reference<util::XCloseable> xClose2(xComp2, UNO_QUERY);
+        if (xClose2.is())
+            xClose2->close(true);
+    }
 }
 
 void RptBasicTest::testLoadingAndSaving(const OUString& rFilterName, const OUString& rReportName,
